Added own Ising figure

--- a/guide.tex
+++ b/guide.tex
@@ -101,8 +101,8 @@ When the nonlinear equations are coupled, this cannot be solved analytically in 
 The Ising model is a statistical physics model of magnetism. In its simplest form, it consists of a set of sites $\sigma_{\rm i}$, or spins, with 2 possible orientations (up and down), coupled to an external magnetic field $h$ and coupled to each other with couplings $J$ \cite{Reif:2009uf}. The strength of the magnetic field determines the tendency of each of the spins to orient in a particular direction and the couplings $J$ determine whether the spins tend to point together ($J>0$) or against each other ($J<0$). Typically, neighbors are defined as spins that interact with one another given by some underlying lattice structure as in Figure \ref{gr:ising}.
 
 \begin{figure}[htbp]\centering
-	\includegraphics[width=.85\linewidth]{images/ising}
-\caption{Example of an Ising model on a lattice.}
+	\includegraphics[width=.85\linewidth,clip,trim={100 70 70 60}]{images/ising_example}
+\caption{Example of a fully connected Ising model with random couplings.}
 \label{gr:ising}
 \end{figure}
 
